# openapi.yml
@@ -455,7 +455,119 @@ paths:
           $ref: '#/components/responses/NotFoundError'
         default:
           $ref: '#/components/responses/GeneralError'
-
+  /admin/informations:
+    get:
+      tags:
+        - 管理者
+      summary: お知らせ一覧取得
+      description: お知らせ一覧を取得する
+      responses:
+        200:
+          $ref: '#/components/responses/GetInformations'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        default:
+          $ref: '#/components/responses/GeneralError' 
+    post:
+      tags:
+        - 管理者
+      summary: お知らせ追加
+      description: お知らせを追加する
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                title:
+                  type: string
+                content:
+                  type: string
+                category:
+                  type: string
+                  enum:
+                    - bug_report
+                    - feature_request
+                    - other
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        default:
+          $ref: '#/components/responses/GeneralError'
+  /admin/informations/{id}:
+    delete:
+      tags:
+        - 管理者
+      summary: お知らせ削除
+      description: お知らせを削除する
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        default:
+          $ref: '#/components/responses/GeneralError'
+    put:
+      tags:
+        - 管理者
+      summary: お知らせ更新
+      description: お知らせを更新する
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                title:
+                  type: string
+                content:
+                  type: string
+                category:
+                  type: string
+                  enum:
+                    - bug_report
+                    - feature_request
+                    - other
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        default:
+          $ref: '#/components/responses/GeneralError'
+  /admin/informations/{id}/publish:
+    post:
+      tags:
+        - 管理者
+      summary: お知らせ公開
+      description: お知らせを公開する
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        default:
+          $ref: '#/components/responses/GeneralError'
 components:
   responses:
     GetReceiptAnalyzeResult:
@@ -507,6 +619,14 @@ components:
           schema:
             type : object
             $ref: '#/components/schemas/HouseholdBook'
+    GetInformations:
+      description: お知らせ一覧取得
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Information'
   schemas:
     UserAccount:
       type: object
@@ -713,3 +833,20 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ReceiptAnalyzeResultItem'
+    Information:
+      type: object
+      properties:
+        id:
+          type: integer
+        title:
+          type: string
+        content:
+          type: string
+        isPublished:
+          type: boolean
+        category:
+          type: string
+          enum:
+            - bug_report
+            - feature_request
+            - other
